syntax = "proto3";

package warehouse;

option go_package = "microservice-warehouses/proto;warehouse";

service WarehouseService {
  rpc GetWarehouseByID(GetWarehouseRequest) returns (WarehouseResponse);
}

message GetWarehouseRequest {
  string id = 1;
}

message WarehouseResponse {
  string id = 1;
  string address = 2;
}